K8/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deployment
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
      - name: cart-service
        image: apparaorayidi606/cart-service:latest
        ports:
        - containerPort: 5003
        readinessProbe:
          httpGet:
            path: /health
            port: 5003
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: ecommerce
spec:
  selector:
    app: cart-service
  ports:
  - port: 80
    targetPort: 5003
  type: ClusterIP
