K8/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: customer-service
        image: apparaorayidi606/customer-service:latest
        ports:
        - containerPort: 5002
        readinessProbe:
          httpGet:
            path: /health
            port: 5002
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: ecommerce
spec:
  selector:
    app: customer-service
  ports:
  - port: 80
    targetPort: 5002
  type: ClusterIP
